<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.touchtheblock.TouchTheBlock">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <Button
            android:id="@+id/btnPlayBox"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_margin="0dp"
            android:background="#000000"
            android:padding="0dp"
            android:translationX="20dp" />

        <Button
            android:id="@+id/btn_startgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_game"
            android:translationY="30dp" />

        <TextView
            android:id="@+id/tv_gamelost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|center"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/game_lost"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            android:translationY="-30dp"
            android:typeface="normal"

            app:fontFamily="sans-serif-medium" />

        <Button
            android:id="@+id/btnBlockCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/block"
            android:translationY="-60dp" />

        <Button
            android:id="@+id/btnBackCol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/btnEndGame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:background="#ffffff"
                android:padding="0dp" />


        </FrameLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>